[gd_scene load_steps=2 format=3 uid="uid://character_select_scene"]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1_char_select"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_char_select")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "选择角色"
horizontal_alignment = 1

[node name="CharacterContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DescriptionLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "请选择一个角色"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "确认选择"
disabled = true

[node name="BackButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "返回"
